# meta-ads-mcp

./: .env.example  .gitignore  LICENSE  README.md  meta_ads_server.py  pyproject.toml  requirements.txt  test_meta_ads_mcp.py
content/: note-00-Meta-Ads-MCP-導入手順.md  note-01-代理店に年間480万円.md  note-02-獲得単価4倍の差.md  note-03-22パーセントが消えている.md  x-投稿テンプレート集.md
docs/: index.html  導入手順.md
docs/reports/: 2026-03-28-クリエイティブ①②-パフォーマンスレポート.md  2026-04-01-新規売上API連携-分析テンプレート.md  Notion週次レポート_タコだワン_Meta広告_2026-03-28.md  notion-新しいリードキャンペーン分析.md
lp/: .env.local.example  middleware.ts  package-lock.json  package.json
lp/app/: globals.css  layout.tsx  page.tsx
lp/app/api/auth/: route.ts
lp/app/api/checkout/: route.ts
lp/app/api/verify/: route.ts
lp/app/api/webhook/: route.ts
lp/app/dashboard/: layout.tsx  page.tsx
lp/app/dashboard/campaigns/: page.tsx
lp/app/dashboard/creatives/: page.tsx
lp/app/dashboard/login/: page.tsx
lp/app/dashboard/reports/: page.tsx
lp/app/notes/: layout.tsx  page.tsx
lp/app/notes/[slug]/: page.tsx
lp/app/success/: page.tsx
lp/components/: FAQ.tsx  Features.tsx  FinalCTA.tsx  Hero.tsx  HowItWorks.tsx  Impact.tsx  Navbar.tsx  NoteMarkdown.tsx  NotionCarousel.tsx  PainPoints.tsx  Pricing.tsx  ROICalculator.tsx  SocialProof.tsx  TrustSection.tsx
lp/components/dashboard/: CampaignTable.tsx  KpiCard.tsx  Sidebar.tsx  SpendChart.tsx  TopBar.tsx
lp/content/notes/: agency-480.md  click-leak-22.md  cpa-4x.md
lp/lib/: auth.ts  mock-data.ts  notes.ts
