[project]
name = "mcp-meta-ads"
version = "0.1.0"
description = "Meta (Facebook/Instagram) Ads MCP Server — manage & analyze Meta ads through AI chat"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nishi0077"}
]
keywords = ["mcp", "meta ads", "facebook ads", "instagram ads", "claude", "advertising", "model context protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nishi0077/meta-ads-mcp"
Repository = "https://github.com/nishi0077/meta-ads-mcp"
Issues = "https://github.com/nishi0077/meta-ads-mcp/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
